--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=foro
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/foro
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
